# mlx-audio

./: .pre-commit-config.yaml  pyproject.toml  pytest.ini
mlx_audio/stt/: utils.py
